--- a/Luca/WebContent/NewFile.css
+++ b/Luca/WebContent/NewFile.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:400,700|Montserrat:900");
 html {
   display: grid;
+  position: relative;
   min-height: 100%;
 }
 
@@ -219,19 +220,19 @@ footer a:hover {
 }
 
 .calss{
-  position: relative;
+  position: center;
   margin: auto;
 
 }
 
-.class h1{
+.container p{
     font-family: helvetica, arial, sans-serif;
     width: 100%;
     font-size: 10vw;
     color: white;
-    top: 18%;
+    top: auto;
     text-align: center;
-    position: absolute;
+    position: relative;
     left: 0;
     right: 0;
     transform: translate3d(0,-50%,0);
