--- a/Luca/WebContent/NewFile.css
+++ b/Luca/WebContent/NewFile.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:400,700|Montserrat:900");
 html {
   display: grid;
-  position: relative;
   min-height: 100%;
 }
 
@@ -15,6 +14,10 @@ body {
   margin: auto;
   overflow: auto;
 }
+.palloncini{
+  width:600px ;
+  height: ;
+}
 
 h1 {
   font-family: "Lato", sans-serif;
@@ -27,9 +30,8 @@ h1 {
 }
 .video{
   position: relative;
-  margin: auto;
   overflow: auto;
-  z-index: 1000;
+  z-index: 15;
 }
 
 #timer {
@@ -198,45 +200,17 @@ h1 {
   clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
 }
 
-footer {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  text-transform: uppercase;
-  padding: 10px;
-  font-family: "Lato", sans-serif;
-  font-size: 0.7em;
-}
-footer p {
-  letter-spacing: 3px;
-  color: #EF2F3C;
-}
-footer a {
-  color: #F6F4F3;
-  text-decoration: none;
-}
-footer a:hover {
-  color: #276FBF;
-}
+.buoncomp p{
 
-.calss{
-  position: center;
-  margin: auto;
-
-}
-
-.container p{
     font-family: helvetica, arial, sans-serif;
-    width: 100%;
-    font-size: 10vw;
+    font-size: 9vw;
     color: white;
     top: auto;
+    margin-bottom: 0%;
     text-align: center;
-    position: relative;
     left: 0;
     right: 0;
     transform: translate3d(0,-50%,0);
-    margin: 0;
     background: url('http://i.giphy.com/VQ2XbYu2ITUbK.gif');
     background-size: cover;
     background-repeat: norepeat;
