--- a/Luca/WebContent/NewFile.css
+++ b/Luca/WebContent/NewFile.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:400,700|Montserrat:900");
+@import url("https://fonts.googleapis.com/css?family=Charmonman");
 html {
   display: grid;
   min-height: 100%;
@@ -15,8 +16,6 @@ body {
   overflow: auto;
 }
 .palloncini{
-  width:600px ;
-  height: ;
 }
 
 h1 {
@@ -200,17 +199,21 @@ h1 {
   clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
 }
 
-.buoncomp p{
+.calss{
+  position: center;
 
-    font-family: helvetica, arial, sans-serif;
-    font-size: 9vw;
+}
+
+.container p{
+    font-family: 'Charmonman', cursive;
+    width: 100%;
+    font-size: 12vw;
     color: white;
     top: auto;
-    margin-bottom: 0%;
     text-align: center;
     left: 0;
     right: 0;
-    transform: translate3d(0,-50%,0);
+    transform: translate3d(0,-20%,0);
     background: url('http://i.giphy.com/VQ2XbYu2ITUbK.gif');
     background-size: cover;
     background-repeat: norepeat;
@@ -218,4 +221,8 @@ h1 {
 	    -webkit-text-fill-color: transparent;
 }
 
+.footer h1{
+  text-align:center;
+  font-size: 40px;
+}
 
